welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (a == 10 || b == 10 || c == 10) {
             ^